tests/baselines/reference/es5ExportEqualsDts.errors.txt
es5ExportEqualsDts.ts(8,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== es5ExportEqualsDts.ts (1 errors) ====
    class A {
        foo() {
            var aVal: A.B;
            return aVal;
        }
    }
    
    module A {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export interface B { }
    }
    
    export = A